@@ -61,7 +61,7 @@ public class BorderWidthProperty extends AbstractProperty {
 	}
 
 	public Object calculate(LexicalUnit lu, Styles parentStyles, Styles styles) {
-		return new Integer(this.calculateInternal(lu, parentStyles, styles));
+		return Integer.valueOf(calculateInternal(lu, parentStyles, styles));
 	}
 
 	private int calculateInternal(LexicalUnit lu, Styles parentStyles,
